<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
	<TextView
	    android:id="@+id/textViewEndTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_end_activity_title"
        android:textSize="30sp" />
	
    <Button
        android:layout_width="170dip" 
		android:layout_height="wrap_content" 
		android:id="@+id/btnShareEndTraining"
		android:layout_below="@id/textViewEndTraining"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
		android:text="@string/training_end_activity_share_button"></Button>
    
    <Button
        android:layout_width="170dip" 
		android:layout_height="wrap_content" 
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
		android:id="@+id/btnGraphicEndTraining"
		android:layout_below="@id/btnShareEndTraining"
		android:text="@string/training_end_activity_graphic_button"></Button>
    
    <Button 
        android:layout_width="170dip"
		android:layout_height="wrap_content" 
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
		android:layout_below="@id/btnGraphicEndTraining"
		android:id="@+id/btnExitNoSaveEndTraining"
		android:text="@string/training_end_activity_exit_no_save_button"></Button>
    
    <Button 
        android:layout_width="170dip"
		android:layout_height="wrap_content" 
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
		android:id="@+id/btnExitSaveEndTraining"
		android:layout_below="@id/btnExitNoSaveEndTraining"
		android:text="@string/training_end_activity_exit_save_button"></Button>
    
    
</RelativeLayout>
