<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    
    <ImageView
	    android:id="@+id/shoeImage1"
	    android:layout_width="50dp"
	    android:layout_height="50dp"
	    android:src="@drawable/left_shoe"
	    android:layout_marginTop="50dp"
    	android:contentDescription="@string/training_activity_left_shoe_description" />
    

	<ImageView
	    android:id="@+id/shoeImage2"
	    android:layout_width="50dp"
	    android:layout_height="50dp"
	    android:layout_toEndOf="@id/shoeImage1"
       	android:layout_toRightOf="@id/shoeImage1"
	    android:src="@drawable/right_shoe"
	    android:layout_marginTop="50dp"
	    android:contentDescription="@string/training_activity_right_shoe_description" />
	
	
	<TextView
	    android:id="@+id/textStepCount"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="80sp"
	    android:layout_toEndOf="@id/shoeImage2"
       	android:layout_toRightOf="@id/shoeImage2"
	    android:text="@string/training_activity_counter_init"
	    android:contentDescription="@string/training_activity_positioning_image_description"
	    />
	

    
	
	<ImageView
        android:id="@+id/btnStop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/stop_button"
        android:layout_below="@id/shoeImage2"
        android:onClick="MainActivityListener"
        android:layout_alignRight="@id/textStepCount"
        android:layout_alignEnd="@id/textStepCount"
        android:contentDescription="@string/training_activity_stop_button_description"/>
	
	
    <ImageView
        android:id="@+id/btnStart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/play_button"
        android:onClick="MainActivityListener"
        android:layout_below="@id/shoeImage1"
        android:layout_toStartOf="@id/btnStop"
       	android:layout_toLeftOf="@id/btnStop"
        android:contentDescription="@string/training_activity_play_button_description"/>


    
    
   
    
     
    
    
    
    <TextView
        android:id="@+id/textViewClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnStop"
        android:text="@string/training_activity_clock_init"
        android:layout_alignRight="@id/btnStop"
        android:layout_alignEnd="@id/btnStop"
        android:textSize="30sp"/>
    
    
    
    <ImageView
        android:id="@+id/clockImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/clock"
        android:layout_below="@id/btnStart"
        android:onClick="MainActivityListener"
        android:layout_toLeftOf="@id/textViewClock"
        android:layout_toStartOf="@id/textViewClock"
        android:contentDescription="@string/training_activity_clock_image_description"/>
    
   
   
    <com.so2studio.stepcounter.VerticalBar
	  android:id="@+id/seekBar1"
	  android:layout_width="wrap_content"
	  android:layout_height="200dp"
	  android:layout_alignParentRight="true"
	  android:layout_alignParentEnd="true" 
	  android:layout_marginRight="10dp"
	  android:layout_marginEnd="10dp"
	  android:progressDrawable="@drawable/progress"
      android:thumb="@drawable/thumb" 
	  />
   
    
    
    
   
   
</RelativeLayout>
