<RelativeLayout 
    android:id="@+id/RelativeLayout01" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textViewMainTitleErrorActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_activity_title" 
        android:textSize="12sp"/>
    
    <Button 
        android:layout_width="150dip"
		android:layout_height="wrap_content" 
		android:id="@+id/btnProfileManagementErrorActivity"
		android:layout_centerHorizontal="true"
		android:layout_below="@id/textViewMainTitleErrorActivity"
   		android:layout_marginTop="20dip"
		android:text="@string/error_activity_profile_management_button"></Button>
     

    
    
    <Button 
        android:layout_width="150dip"
		android:layout_height="wrap_content" 
		android:id="@+id/btnCancelErrorActivity"
		android:layout_below="@id/btnProfileManagementErrorActivity"
   		android:layout_marginTop="20dip"
   		android:layout_centerHorizontal="true"
		android:text="@string/error_activity_cancel_button"></Button>
    
    
</RelativeLayout>
