<RelativeLayout 
    android:id="@+id/RelativeLayout01" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    
    <Button 
        android:layout_width="150dp"
		android:layout_height="wrap_content" 
		android:id="@+id/btnNewTraining"
		android:text="@string/main_activity_new_training_button"
        android:layout_above="@+id/btnViewTrainings"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"></Button>
   	
    <Button 
        android:layout_width="150dp"
		android:layout_height="wrap_content" 
		android:id="@+id/btnViewTrainings"
		android:text="@string/main_activity_view_trainings_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"></Button>
	
    
    
    <Button 
        android:layout_width="150dp"
		android:layout_height="wrap_content" 
		android:id="@+id/btnProfileManagement"
		android:text="@string/main_activity_profile_management_button"
        android:layout_below="@+id/btnViewTrainings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"></Button>
    
    
</RelativeLayout>
