<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <com.so2studio.stepcounter.RoundedImageView
        android:id="@+id/circularImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/profile"
        android:layout_gravity="center"
        />

    <TextView
          android:id="@+id/profileManagementActivityNameTextView"
          android:layout_width="100dip"
          android:layout_height="40dip"
          android:layout_toRightOf="@+id/circularImage"
          android:layout_toEndOf="@+id/circularImage"
          android:layout_alignTop="@+id/circularImage"
          android:text="@string/profile_management_activity_name_text_view"
          />
    <EditText
          android:id="@+id/profileManagementActivityNameEditText"
          android:layout_width="120dip"
          android:layout_height="40dip"
          android:layout_toRightOf="@id/profileManagementActivityNameTextView"
          android:layout_toEndOf="@id/profileManagementActivityNameTextView"
          android:layout_alignBottom="@+id/profileManagementActivityNameTextView"
          android:inputType="text">
    </EditText>
    
    
    
    <TextView
          android:id="@+id/profileManagementActivitySurnameTextView"
          android:layout_width="100dip"
          android:layout_height="40dip"
          android:layout_below="@id/profileManagementActivityNameTextView"
          android:layout_toRightOf="@+id/circularImage"
          android:layout_toEndOf="@+id/circularImage"
          android:layout_alignBottom="@+id/circularImage"
          android:text="@string/profile_management_activity_surname_text_view" />
    <EditText
          android:id="@+id/profileManagementActivitySurnameEditText"
          android:layout_width="120dip"
          android:layout_height="40dip"
          android:layout_toRightOf="@id/profileManagementActivitySurnameTextView"
          android:layout_toEndOf="@id/profileManagementActivitySurnameTextView"
          android:layout_below="@id/profileManagementActivityNameEditText"
          android:inputType="text">
    </EditText>
    
    
    
    
    <ImageView
	    android:id="@+id/heightImage"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_marginTop="2dp"
	    android:src="@drawable/height_image"
		android:layout_below="@id/profileManagementActivitySurnameTextView"
    	android:contentDescription="@string/profile_management_activity_height_image_description" />
    <TextView
          android:id="@+id/profileManagementActivityHeightTextView"
          android:layout_width="80dip"
          android:layout_height="40dip"
          android:layout_marginTop="2dp"
          android:layout_below="@id/profileManagementActivitySurnameTextView"
          android:layout_toRightOf="@id/heightImage"
          android:layout_toEndOf="@id/heightImage"
          android:text="@string/profile_management_activity_height_text_view"
          android:layout_alignBaseline="@id/heightImage" />
    <EditText
          android:id="@+id/profileManagementActivityHeightEditText"
          android:layout_width="120dip"
          android:layout_height="40dip"
          android:layout_marginTop="2dp"
          android:layout_toRightOf="@id/profileManagementActivityHeightTextView"
          android:layout_toEndOf="@id/profileManagementActivityHeightTextView"
          android:layout_below="@id/profileManagementActivitySurnameEditText"
          android:inputType="number"
          android:layout_alignBaseline="@id/heightImage">
    </EditText>
    
    
    
    
    <ImageView
	    android:id="@+id/weightImage"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_marginTop="2dp"
	    android:src="@drawable/weight_image"
	    android:layout_below="@id/heightImage"
    	android:contentDescription="@string/profile_management_activity_weight_image_description" />
    <TextView
          android:id="@+id/profileManagementActivityWeightTextView"
          android:layout_width="80dip"
          android:layout_height="40dip"
          android:layout_marginTop="2dp"
          android:layout_below="@id/profileManagementActivityHeightTextView"
          android:layout_toRightOf="@id/weightImage"
          android:layout_toEndOf="@id/weightImage"
          android:layout_alignBaseline="@id/weightImage"
          android:text="@string/profile_management_activity_weight_text_view"/>
    <EditText
          android:id="@+id/profileManagementActivityWeightEditText"
          android:layout_width="120dip"
          android:layout_height="40dip"
          android:layout_marginTop="2dp"
          android:layout_toRightOf="@id/profileManagementActivityWeightTextView"
          android:layout_toEndOf="@id/profileManagementActivityWeightTextView"
          android:layout_below="@id/profileManagementActivityHeightEditText"
          android:inputType="number"
          android:layout_alignBaseline="@id/weightImage">
    </EditText>
    
    
    <ImageView
	    android:id="@+id/stepImage"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_marginTop="2dp"
	    android:src="@drawable/step_image"
	    android:layout_below="@id/weightImage"
    	android:contentDescription="@string/profile_management_activity_step_image_description" />
    <TextView
          android:id="@+id/profileManagementActivityStepLengthTextView"
          android:layout_width="80dip"
          android:layout_height="40dip"
          android:layout_marginTop="2dp"
          android:layout_below="@id/profileManagementActivityWeightTextView"
          android:layout_toRightOf="@id/stepImage"
          android:layout_toEndOf="@id/stepImage"
          android:text="@string/profile_management_activity_step_length_text_view"
          android:layout_alignBaseline="@id/stepImage" />
    <EditText
          android:id="@+id/profileManagementActivityStepLengthEditText"
          android:layout_width="120dip"
          android:layout_height="40dip"
          android:layout_marginTop="2dp"
          android:layout_toRightOf="@id/profileManagementActivityStepLengthTextView"
          android:layout_toEndOf="@id/profileManagementActivityStepLengthTextView"
          android:layout_below="@id/profileManagementActivityWeightEditText"
          android:inputType="number"
          android:layout_alignBaseline="@id/stepImage">
    </EditText>
    
    
    <ImageView
	    android:id="@+id/genderImage"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_marginTop="2dp"
	    android:src="@drawable/gender_image"
	    android:layout_below="@id/stepImage"
    	android:contentDescription="@string/profile_management_activity_gender_image_description" />
    <TextView
          android:id="@+id/profileManagementActivityGenderTextView"
          android:layout_width="80dip"
          android:layout_height="40dip"
          android:layout_marginTop="2dp"
          android:layout_toRightOf="@id/genderImage"
          android:layout_toEndOf="@id/genderImage"
          android:layout_below="@id/profileManagementActivityStepLengthTextView"
          android:text="@string/profile_management_activity_gender_text_view"
          android:layout_alignBaseline="@id/genderImage" />
    <EditText
          android:id="@+id/profileManagementActivityGenderEditText"
          android:layout_width="120dip"
          android:layout_height="40dip"
          android:layout_marginTop="2dp"
          android:layout_toRightOf="@id/profileManagementActivityGenderTextView"
          android:layout_toEndOf="@id/profileManagementActivityGenderTextView"
          android:layout_below="@id/profileManagementActivityStepLengthEditText"
          android:inputType="text"
          android:layout_alignBaseline="@id/genderImage">
    </EditText>
    
    
    
    
    
     <TextView
          android:id="@+id/profileManagementActivityXTextView"
          android:layout_width="80dip"
          android:layout_height="40dip"
          android:layout_marginTop="2dp"
          android:layout_marginLeft="40dp"
          android:layout_marginStart="40dp"
          android:layout_below="@id/genderImage"
          android:text="@string/profile_management_activity_x_text_view" />
    <EditText
          android:id="@+id/profileManagementActivityXEditText"
          android:layout_width="120dip"
          android:layout_height="40dip"
          android:layout_marginTop="2dp"
          android:layout_toRightOf="@id/profileManagementActivityXTextView"
          android:layout_toEndOf="@id/profileManagementActivityXTextView"
          android:layout_below="@id/genderImage"
          android:inputType="text">
    </EditText>
    
    
    
    
    <Button 
        android:id="@+id/btnProfileManagementActivityStatistics"
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_below="@id/profileManagementActivityXTextView"
        android:text="@string/profile_management_activity_statistics_text" 
        android:layout_marginTop="20dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        </Button>
		
    <Button
        android:id="@+id/btnProfileManagementActivitySave" 
        android:layout_width="100dip"
        android:layout_height="40dip"
        android:layout_below="@id/profileManagementActivityXTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/profile_management_activity_save_text" 
        android:layout_marginTop="20dip">

        </Button>
    
    
    

</RelativeLayout>
